<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <Button
        android:id="@+id/selfreflexionButt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="EvalSelfReflexion"
        android:text="@string/selfreflexionName"/>

    <Button
        android:id="@+id/selfsupportButt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="EvalSelfSupport"
        android:text="@string/selfsupportName"/>


    <LinearLayout
        android:id="@+id/evalChooseLoadingLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/loading"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progressDrawable="@drawable/circular_progress_bar"/>
    </LinearLayout>

</LinearLayout>
